fix: add flex-wrap property

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -44,4 +44,5 @@
   gap: $gap;
   align-items: $align;
   justify-content: $justify;
+  flex-wrap: $wrap;
 }
